# bootcamp_launch

./: CMakeLists.txt  README.md  package.xml
config/: lanelet2_map_provider.param.yaml  lidarslam.yaml  map_publisher.param.yaml  ndt_localizer.param.yaml  ouster_config.yaml
data/: Pennovation.yaml
design/: bootcamp_launch-design.md
launch/: bootcamp_launch.launch.py  localization.launch.py
rviz/: localization.rviz
urdf/: lincoln_mkz_17.urdf
