<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bootcamp_launch</name>
  <version>1.0.0</version>
  <description>Launch package for bootcamp</description>
  <maintainer email="ruanzh@seas.upenn.edu">Zhihao Ruan</maintainer>
  <license>Apache 2.0</license>

  <!-- for maintaining package dependencies in CMakeList -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <exec_depend>dbw_ford_can</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_ouster</exec_depend>

  <!-- provides linting & formatting -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
